objects/Events__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will hold the event name and it&apos;s associated price values</description>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Name_2__c</fullName>
        <label>Coupon Name 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Name__c</fullName>
        <label>Coupon Name 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent_2__c</fullName>
        <label>Discount Percent 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_cost__c</fullName>
        <label>Event cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Events</label>
</CustomObject>